	eval : fixed bug with equality handling
	eval : fixed issue with file creation not defaulting to binary
	cs/java : fixed DCE bug that would lose toString method of thrown objects
	php/python : fixed some bit operators for Int32 (#5938)
	php : fixed accessing `static inline var` via reflection (#6630)
	php : fixed Math.min() and Math.max() for NAN on PHP 7.1.9 and 7.1.10

2017-09-12: 4.0.0-preview.1

	New features:

	all : reworked macro interpreter
	all : added support for arrow functions

	General improvements and optimizations:

	js : improved generation of `break` inside `switch` inside loops (#4964)
	cs : improved generation of enum classes (#6119)
	sys : the `database` parameter of `Mysql.connect` is now optional
	js : updated jQuery extern (js.jquery.*) for jQuery 1.12.4 / 3.2.1 support.
	Makefile : default Unix installation location $(INSTALL_DIR) changed from /usr to /usr/local.
	Makefile : default Unix std location $(INSTALL_STD_DIR) changed from $(INSTALL_LIB_DIR)/std to $(INSTALL_DIR)/share/haxe/std.

	Removals:

	all : removed --eval command line argument
	sys : SPOD (sys.db.Object, sys.db.Manager and friends) was moved into a separate library `record-macros` (https://github.com/HaxeFoundation/record-macros)
	js : js.JQuery and js.SWFObject were moved into hx3compat library (https://github.com/HaxeFoundation/hx3compat),
	     it's recommended to use more modern js.jquery.JQuery and js.swfobject.SWFObject classes.
	all : moved haxe.web.Dispatch into hx3compat library (https://github.com/HaxeFoundation/hx3compat).

	Bugfixes:

	php7: fix Reflect.field() for strings (#6276)
	php7: fix `@:enum abstract` generation  without `-dce full` (#6175)
	php7: fix using enum constructor with arguments as a call argument (#6177)
	php7: fix `null` property access (#6281)
	php7: fix setting values in a map stored in another map (#6257)
	php7: fix haxe.io.Input.readAll() with disabled analyzer optimizations (#6387)